# gradle-version-manager

./: Cargo.toml  LICENSE  README.md  README_ZH.md  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: build-release-archive.sh  render-aur-package.sh
src/: cli.rs  main.rs
src/store/: fs.rs  mod.rs  remote.rs  tests.rs  types.rs  version.rs
