[package]
name = "gvm"
version = "1.0.0"
edition = "2024"
description = "A small Rust-based Gradle version manager"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tempfile = "3.23.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
